--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 </body>
 
 <script>
-    localStorage.setItem("redirectTo", window.location.pathname);
+    localStorage.setItem("redirectTo", window.location.pathname + "?" + window.location.search);
     window.location.href = "https://code-rooms.github.io";
 </script>
 </html>
